[gd_scene load_steps=6 format=3 uid="uid://1j4y0fx4scyn"]

[ext_resource type="Script" path="res://Scripts/Flower.gd" id="1_ds30e"]
[ext_resource type="Texture2D" uid="uid://dpmwmmikb8jc" path="res://Textures/Green.png" id="2_v33gb"]
[ext_resource type="Texture2D" uid="uid://tvjfp6cr8gpr" path="res://Textures/Flowers/21.png" id="3_vtgbx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uf04m"]
albedo_texture = ExtResource("2_v33gb")

[sub_resource type="BoxShape3D" id="BoxShape3D_ysjxo"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Flower" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
script = ExtResource("1_ds30e")

[node name="FlowerBox" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_uf04m")
size = Vector3(0.5, 0.5, 0.5)

[node name="FlowerSprite" type="Sprite3D" parent="FlowerBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.251, 0)
pixel_size = 0.0033
texture = ExtResource("3_vtgbx")
region_rect = Rect2(-305.5, -177, 899, 553)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ysjxo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
